<?xml version="1.0"?>
<package format="2">
  <name>ros_tutorials</name>
  <version>0.0.0</version>
  <description>The ros_tutorials package</description>
  <author email="author@some.todo">author_name</author>
  <maintainer email="maintainer@some.todo">maintainer_name</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>move_base_msgs</depend>
  <depend>geometry_msgs</depend>
</package>
