<?xml version="1.0"?>
<package format="2">
  <name>image_capture</name>
  <version>0.0.0</version>
  <description>The image_capture package</description>
  <author email="author@some.todo">Kyuhyong</author>
  <maintainer email="maintainer@some.todo">maintainer_name</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>move_base_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
</package>
